Fix to events calendar to display events that end at 00:00, add drop shadow to events element on mobile as suggested by @stankur

--- a/ubyssey/static_src/src/styles/components/events/_base.scss
+++ b/ubyssey/static_src/src/styles/components/events/_base.scss
@@ -447,6 +447,9 @@ header.events{
     }
     div.day {
         padding: 1.5em;
+        ul {
+            filter: drop-shadow(0 1px 3px black);
+        }
         li {
             margin-right: 2em;
             b {
